@@ -165,13 +165,13 @@ L<https://github.com/tupinek/Error-Pure-HTTP-JSON>
 
 =head1 AUTHOR
 
-Michal Špaček L<mailto:skim@cpan.org>
+Michal Josef Špaček L<mailto:skim@cpan.org>
 
 L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2013-2015 Michal Špaček
+ © 2013-2015 Michal Josef Špaček
  BSD 2-Clause License
 
 =head1 VERSION
