@@ -1,6 +1,7 @@
 0.06
  - Fix Makefile.PL fails with no '.' in @INC.
  - Update Module::Install to 1.21 version.
+ - Update author name.
 
 0.05 2015-09-17T23:41:44+02:00
  [Common]
